// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ModelsPage redering should render when loading 1`] = `
<TableIndexPage
  apiOptions={
    Object {
      "key": "MODELS",
    }
  }
  apiUrl="/api/models?include_permissions=true"
  beforeToolbarComponent={null}
  breadcrumbOptions={null}
  controller="models"
  creatable={true}
  customActionButtons={Array []}
  customCreateAction={null}
  customExportURL=""
  customHelpURL=""
  customSearchProps={null}
  cutsomToolbarItems={null}
  exportable={false}
  hasHelpPage={false}
  header="Hardware models"
  searchable={true}
>
  <Component
    fetchAndPush={[Function]}
    hasData={false}
    hasError={false}
    isLoading={true}
    itemCount={2}
    message={Object {}}
    models={
      Array [
        Object {
          "canDelete": true,
          "canEdit": true,
          "hostsCount": 5,
          "id": 1,
          "name": "my-hw-model",
          "vendorClass": "custom",
        },
        Object {
          "canDelete": false,
          "canEdit": false,
          "hostsCount": 4,
          "id": 2,
          "name": "your-hw-model",
          "vendorClass": "B+",
        },
      ]
    }
    sort={
      Object {
        "by": "defaultName",
        "order": "ASC",
      }
    }
  />
</TableIndexPage>
`;

exports[`ModelsPage redering should render with error 1`] = `
<TableIndexPage
  apiOptions={
    Object {
      "key": "MODELS",
    }
  }
  apiUrl="/api/models?include_permissions=true"
  beforeToolbarComponent={null}
  breadcrumbOptions={null}
  controller="models"
  creatable={true}
  customActionButtons={Array []}
  customCreateAction={null}
  customExportURL=""
  customHelpURL=""
  customSearchProps={null}
  cutsomToolbarItems={null}
  exportable={false}
  hasHelpPage={false}
  header="Hardware models"
  searchable={true}
>
  <Component
    fetchAndPush={[Function]}
    hasData={false}
    hasError={true}
    isLoading={false}
    itemCount={2}
    message={
      Object {
        "text": "this is error",
        "type": "error",
      }
    }
    models={
      Array [
        Object {
          "canDelete": true,
          "canEdit": true,
          "hostsCount": 5,
          "id": 1,
          "name": "my-hw-model",
          "vendorClass": "custom",
        },
        Object {
          "canDelete": false,
          "canEdit": false,
          "hostsCount": 4,
          "id": 2,
          "name": "your-hw-model",
          "vendorClass": "B+",
        },
      ]
    }
    sort={
      Object {
        "by": "defaultName",
        "order": "ASC",
      }
    }
  />
</TableIndexPage>
`;

exports[`ModelsPage redering should render with models 1`] = `
<TableIndexPage
  apiOptions={
    Object {
      "key": "MODELS",
    }
  }
  apiUrl="/api/models?include_permissions=true"
  beforeToolbarComponent={null}
  breadcrumbOptions={null}
  controller="models"
  creatable={true}
  customActionButtons={Array []}
  customCreateAction={null}
  customExportURL=""
  customHelpURL=""
  customSearchProps={null}
  cutsomToolbarItems={null}
  exportable={false}
  hasHelpPage={false}
  header="Hardware models"
  searchable={true}
>
  <Component
    fetchAndPush={[Function]}
    hasData={true}
    hasError={false}
    isLoading={false}
    itemCount={2}
    message={Object {}}
    models={
      Array [
        Object {
          "canDelete": true,
          "canEdit": true,
          "hostsCount": 5,
          "id": 1,
          "name": "my-hw-model",
          "vendorClass": "custom",
        },
        Object {
          "canDelete": false,
          "canEdit": false,
          "hostsCount": 4,
          "id": 2,
          "name": "your-hw-model",
          "vendorClass": "B+",
        },
      ]
    }
    sort={
      Object {
        "by": "defaultName",
        "order": "ASC",
      }
    }
  />
</TableIndexPage>
`;

exports[`ModelsPage redering should render with no data 1`] = `
<TableIndexPage
  apiOptions={
    Object {
      "key": "MODELS",
    }
  }
  apiUrl="/api/models?include_permissions=true"
  beforeToolbarComponent={null}
  breadcrumbOptions={null}
  controller="models"
  creatable={true}
  customActionButtons={Array []}
  customCreateAction={null}
  customExportURL=""
  customHelpURL=""
  customSearchProps={null}
  cutsomToolbarItems={null}
  exportable={false}
  hasHelpPage={false}
  header="Hardware models"
  searchable={true}
>
  <Component
    fetchAndPush={[Function]}
    hasData={false}
    hasError={false}
    isLoading={false}
    itemCount={2}
    message={Object {}}
    models={
      Array [
        Object {
          "canDelete": true,
          "canEdit": true,
          "hostsCount": 5,
          "id": 1,
          "name": "my-hw-model",
          "vendorClass": "custom",
        },
        Object {
          "canDelete": false,
          "canEdit": false,
          "hostsCount": 4,
          "id": 2,
          "name": "your-hw-model",
          "vendorClass": "B+",
        },
      ]
    }
    sort={
      Object {
        "by": "defaultName",
        "order": "ASC",
      }
    }
  />
</TableIndexPage>
`;
